# cmdshelf

./: .sourcery.yml  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHE  Makefile  Package.pins  Package.resolved  Package.swift  README.md  cmdshelf-completion.bash
Sources/Poxis/include/: Poxis.h  exec.h  include.h  popen.h
Sources/Poxis/src/: Private.h  exec.c  popen.c
Sources/Scripts/: cmdshelf-completion.bash
Sources/cmdshelf/: ArgumentParsers.swift  Arguments.swift  AutoEquatable.swift  AutoEquatables.out.swift  BlobCommand.swift  CmdshelfYml.swift  Command.swift  Commands.swift  Configuration.swift  Context.swift  Error.swift  Extensions.swift  Functions.swift  Messages.swift  Path.swift  QueuedPrint.swift  RemoteCommand.swift  Sourcery.out.swift  SpawnPager.swift  SwiftPMCommand.swift  Validators.swift  YmlModels.swift  main.swift
doc/man/man1/: cmdshelf-blob.1  cmdshelf-cat.1  cmdshelf-list.1  cmdshelf-remote.1  cmdshelf-run.1  cmdshelf-update.1  cmdshelf.1
docs/: getting-started.md
docs/man/man1/: cmdshelf-blob.1  cmdshelf-cat.1  cmdshelf-list.1  cmdshelf-remote.1  cmdshelf-run.1  cmdshelf-update.1  cmdshelf.1
fixtures/: test-005.expected  test-006.expected
scripts/: bump-version.sh  integration-tests.sh  release.sh
src/: context.rs  corecli.rs  git.rs  lib.rs  main.rs  reporter.rs
src/commands/: cat.rs  help.rs  list.rs  mod.rs  remote.rs  run.rs  update.rs
tests/: main.sh
